--- a/src/app/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-detail/recipe-detail.component.html
@@ -37,10 +37,10 @@
   <footer class="recipe__footer">
     <div class="recipe__actions-group">
       <button class="btn btn--secondary" type="button" (click)="onDecrementServings()">
-        Decrement Servings
+        Diminuisci Quantità
       </button>
       <button class="btn btn--secondary" type="button" (click)="onIncrementServings()">
-        Increment Servings
+        Aumenta Quantità
       </button>
     </div>
   </footer>
