--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -107,16 +107,17 @@
         <div class="add-recipe__field add-recipe__field--full">
           <div class="add-recipe__ingredients-header">
             <span class="add-recipe__label">Ingredienti</span>
-            <button class="add-recipe__mini-cta" type="button">
+            <button class="add-recipe__mini-cta" type="button" (click)="addIngredient()">
               <span aria-hidden="true">＋</span>
               <span>Aggiungi ingrediente</span>
             </button>
           </div>
 
           <div class="add-recipe__ingredients">
+            @for (fc of form.controls['ingredients'].controls; track $index) {
             <div class="add-recipe__ingredient-row">
               <input class="add-recipe__input" type="text" placeholder="Nome" />
-              <input class="add-recipe__input" type="number" placeholder="Quantità" />
+              <input class="add-recipe__input" type="number" placeholder="Quantità"  />
               <select class="add-recipe__select">
                 <option value="">Unità</option>
                 <option value="g">g</option>
@@ -126,26 +127,11 @@
                 <option value="pinch">pinch</option>
                 <option value="clove">clove</option>
               </select>
-              <button class="add-recipe__ghost" type="button" aria-label="Rimuovi ingrediente">
+              <button class="add-recipe__ghost" type="button" aria-label="Rimuovi ingrediente" (click)="removeIngredient($index)">
                 ×
               </button>
             </div>
-            <div class="add-recipe__ingredient-row">
-              <input class="add-recipe__input" type="text" placeholder="Nome" />
-              <input class="add-recipe__input" type="number" placeholder="Quantità" />
-              <select class="add-recipe__select">
-                <option value="">Unità</option>
-                <option value="g">g</option>
-                <option value="ml">ml</option>
-                <option value="tbsp">tbsp</option>
-                <option value="each">each</option>
-                <option value="pinch">pinch</option>
-                <option value="clove">clove</option>
-              </select>
-              <button class="add-recipe__ghost" type="button" aria-label="Rimuovi ingrediente">
-                ×
-              </button>
-            </div>
+            }
           </div>
         </div>
       </div>
@@ -167,20 +153,20 @@
 </section>
 
 @if (confirmationDialog()) {
-  <app-confirmation-dialog>
-    <div dialogTitle>
-      <h1>{{ confirmationDialog()?.title }}</h1>
-    </div>
-    <div dialogMessage>
-      <p>{{ confirmationDialog()?.message }}</p>
-    </div>
-    <div dialogActions>
-      <button class="btn btn--secondary" type="button" (click)="handleDialogDecision(false)">
-        Continua a modificare
-      </button>
-      <button class="btn btn--primary" type="button" (click)="handleDialogDecision(true)">
-        Scarta modifiche
-      </button>
-    </div>
-  </app-confirmation-dialog>
+<app-confirmation-dialog>
+  <div dialogTitle>
+    <h1>{{ confirmationDialog()?.title }}</h1>
+  </div>
+  <div dialogMessage>
+    <p>{{ confirmationDialog()?.message }}</p>
+  </div>
+  <div dialogActions>
+    <button class="btn btn--secondary" type="button" (click)="handleDialogDecision(false)">
+      Continua a modificare
+    </button>
+    <button class="btn btn--primary" type="button" (click)="handleDialogDecision(true)">
+      Scarta modifiche
+    </button>
+  </div>
+</app-confirmation-dialog>
 }
