--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -37,7 +37,7 @@
                 <span class="recipe-list__link-text">
                   {{ recipe.name }}
                 </span>
-                @if (recipe.isFavorite) {
+                @if (recipe.isFavourite) {
                   <span class="recipe-list__badge">Preferita</span>
                 }
               </a>
